# hsmmlearn

./: .coveragerc  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  MANIFEST.in  R-setup.sh  README.md  appveyor-install.cmd  appveyor-test.cmd  appveyor.yml  build.py  doc_requirements.txt  pyproject.toml  requirements.txt  rtd_requirements.txt  setup.py  tox.ini  travis_requirements.txt
.github/workflows/: run-tests.yml
docs/: Makefile  conf.py  index.rst  make.bat
docs/notebooks/: Hidden semi-Markov models (decoding).ipynb
docs/source/: reference.rst  tutorial.rst
hsmmlearn/: emissions.py  hsmm.py  properties.py  r_interface.py  utils.py
hsmmlearn/_hsmm/src/: FBImpl.cpp  InitData.cpp  Mathe.h  ViterbiImpl.cpp  ViterbiImpl.h  consts.h  error.h
hsmmlearn/tests/: test_base.py  test_discrete_hsmm_model.py  test_gaussian_fit.py  test_hsmm_wrappers.py  test_multivariate_fit.py  test_negative_probabilities.py  test_non_parametric.py  test_r_interface.py  viterbi_observations.csv  viterbi_states.csv
notebooks/: tutorial.ipynb
simple_hsmm/: __init__.py  base.pyx  emissions.py  hsmm.py  properties.py
simple_hsmm/_hsmm/: README.txt
simple_hsmm/_hsmm/src/: FBImpl.cpp  FBImpl.h  InitData.cpp  InitData.h  RInterface.cpp  RInterface.h  consts.h  cube.h  dCalc.cpp  dCalc.h  matrix.h
simple_hsmm/base/: _base.pyx
simple_hsmm/tests/: test_base.R  test_base.py  test_discrete_hsmm_model.py  test_non_parametric.py
tools/appveyor/: site.cfg
