[tool.poetry]
name = "hsmmlearn"
version = "0.1.0"
description = "A library for hidden semi-Markov models with explicit durations"
authors = ["Joris Vankerschaver <Joris.Vankerschaver@gmail.com>"]
license = "GPL-3.0"
build = "build.py"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
Cython = "^0.29.23"
numpy = "^1.20.3"
scipy = "^1.6.3"
six = "^1.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "Cython"]
build-backend = "poetry.core.masonry.api"
